--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img id="pic" src="118.png" alt="" srcset="" width="700" />
     </div>
     <div id="hero">
-      <h1 id="project">OUR Projects</h1>
+      <h1 class="project">OUR Projects</h1>
       <div class="timeline">
         <div class="container left">
           <div class="content">
@@ -105,6 +105,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id="about">
+      <h1 class="project">About</h1>
     </div>
 
     <script src="app.js"></script>
