--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
     </div>
     <div id="about">
-      <h1 class="project">About</h1>
+      <h1 class="project">About1</h1>
     </div>
 
     <script src="app.js"></script>
